--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!--changed header to a class-->
     <header class = "header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <nav>
-            
+           <div>
+        <!--added nav tag for accessibility-->
+            <nav class = "nav"> 
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -27,11 +27,11 @@
                 </li>
             </ul>
         </nav>
-        </div>
-        
+    </div>     
 </header>
-    <!--Added title to image for accessibility-->
+    <!--Added title to image for accessibility as well as figure tag-->
     <figure class="hero" title ="Marketing Meeting"></figure>
+    <!--added content tag for whole main page then each individual bit as a article-->
     <section class="content">
         <article id = "search-engine-optimization" class="search-engine-optimization">
             <!--Added alts to images-->
@@ -56,29 +56,31 @@
             </p>
         </article>
     </section>
+    <!--aside for side panel and each bit under it as a article-->
     <aside class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt = "Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt = "brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png">
+            <img src="./assets/images/cost-management.png" alt = "cost management">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
     </aside>
+    <!--amended to be footer tag and updated year-->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
