--- a/index.html
+++ b/index.html
@@ -80,12 +80,6 @@
             </p>
         </article>
     </aside>
-    <!--amended to be footer tag and updated year-->
-    <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
-    </footer>
+        <!--Removed footer as per screenshot-->
 </body>
 </html>
